<resources>
    <string name="app_name" translatable="false">Nookipedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Nookipedia</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="userid">ID:.........................24623746328764</string>
    <string name="useremail">Email:.........................efewg@grfgvrf.com</string>
    <string name="fish">Fish</string>
    <string name="bug">Bug</string>
    <string name="sea">Sea</string>
    <string name="favorite">Favorites</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="shadowsize">Shadow Size</string>
    <string name="priceatnook">Price at Nook\'s Cranny</string>
    <string name="cjprice">CJ\'s Price</string>
    <string name="detail">Details</string>
    <string name="empty">Empty</string>
    <string name="arabic" />
    <string name="arabiclang">العربية</string>
    <string name="english">English</string>
    <string name="availabilitynorth">Availability (North)</string>
    <string name="timenorth">Time(North)</string>
    <string name="availabilitysouth">Availability (South)</string>
    <string name="timesouth">Time (south)</string>
</resources>