<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outsidecolor">

    <androidx.cardview.widget.CardView
        android:id="@+id/bugcardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:foregroundGravity="center"
        android:padding="20dp"
        app:cardBackgroundColor="@color/innercardcolor"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemimageinbugdetailview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/catchingphraseinbugdetailview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/animalcrossingfont"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugcardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favoriteinbugdetailview"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/coin" />

            <ImageView
                android:id="@+id/shareimageinbugview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/giftbox" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationinbugdetailview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/location"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/nookpriceinbugdetailview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/priceatnook"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/flickprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/cjprice"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/northavailabilityinbug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/availabilitynorth"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/northtimeinbug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/timenorth"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/southavailabilityinbug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/availabilitysouth"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/southtimeinbug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/profiledatashow"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/timesouth"
                android:textAlignment="center" />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/bigblathers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>