<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE9CD"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/animalcrossingfont"
        android:text="@string/welcome"
        android:textColor="#651B1B"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/timmynook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/tommynook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favoriteindetailview"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:src="@drawable/tomnook"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/favoriteinbugdetail"
        android:layout_width="101dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/isabelle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="101dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/blathers"
        app:layout_constraintEnd_toStartOf="@+id/favoriteinbugdetail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="383dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView99"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/animalcrossingfont"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#651B1B"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/registeremailedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registerpasswordedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textAlignment="viewStart"
            android:inputType="textPassword" />

        <RadioGroup
            android:id="@+id/languageradioinregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/arbuttoninregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/arabiclang" />

            <RadioButton
                android:id="@+id/enbuttoninregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/animalcrossingfont"
                android:text="@string/english" />
        </RadioGroup>

        <ImageView
            android:id="@+id/registerbutton"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/register" />

        <ImageView
            android:id="@+id/registertologinbutton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:foregroundGravity="center"
            android:src="@drawable/login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>