<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE9CD"
    tools:context=".main.profile" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/animalcrossingfont"
        android:text="@string/profile"
        android:textColor="#651B1B"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/useridinprofile"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/profiledatashow"
        android:fontFamily="@font/animalcrossingfont"
        android:text="@string/userid"
        android:textAlignment="center"
        android:textColor="#726757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/useremailinprofile"
        android:layout_width="287dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/profiledatashow"
        android:fontFamily="@font/animalcrossingfont"
        android:text="@string/useremail"
        android:textAlignment="center"
        android:textColor="#726757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useridinprofile" />

    <ImageView
        android:id="@+id/userimageinprofile"
        android:layout_width="162dp"
        android:layout_height="162dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/insideprofileimage"
        app:layout_constraintBottom_toTopOf="@+id/useridinprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/insideprofileimage" />
</androidx.constraintlayout.widget.ConstraintLayout>